# PowerPay-Micropayment-Wallet-

./: README.md
backend/: .env.example  package-lock.json  package.json
backend/mock-channel-store/: mock-1754294989817-7460.json  mock-1754295066129-3640.json
backend/src/: server.js
backend/src/controllers/: mock.controller.js  payment.controller.js  wallet.controller.js
backend/src/routes/: index.js
backend/src/test/: mock-payment-test.js
contracts/: Cargo.toml
contracts/src/: lib.rs  test_client.js
frontend/: package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.js
frontend/src/components/: Footer.js  Header.js
frontend/src/pages/: About.js  ChannelDetails.js  CreateChannel.js  CreateWallet.js  Dashboard.js  WalletDetails.js
temp-frontend/: package-lock.json  package.json
temp-frontend/src/: App.js  PowerPayStyles.css
temp-frontend/src/components/: Footer.js  Header.js
temp-frontend/src/pages/: About.js  ChannelDetails.js  Dashboard.js
